[package]
name = "materios-runtime"
version = "0.1.0"
description = "Materios Partner Chain runtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# Substrate primitives
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-block-builder = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }

# FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }

# Pallets
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-multisig = { workspace = true }
pallet-utility = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Local
pallet-orinq-receipts = { workspace = true }
orinq-receipts-primitives = { workspace = true }
pallet-motra = { workspace = true }
motra-primitives = { workspace = true }
sp-arithmetic = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
getrandom = { workspace = true }

# IOG Partner Chains pallets
pallet-sidechain = { workspace = true }
pallet-session-validator-management = { workspace = true }
pallet-block-rewards = { workspace = true }
pallet-partner-chains-session = { workspace = true }
pallet-native-token-management = { workspace = true }
pallet-session-runtime-stub = { workspace = true }

# IOG Partner Chains primitives
sp-sidechain = { workspace = true }
sp-block-rewards = { workspace = true }
sp-session-validator-management = { workspace = true, features = ["serde"] }
sp-native-token-management = { workspace = true, features = ["serde"] }
sidechain-domain = { workspace = true, features = ["serde"] }
sidechain-slots = { workspace = true }
session-manager = { workspace = true }
authority-selection-inherents = { workspace = true }

# Additional Substrate deps for IOG pallets
sp-staking = { workspace = true }
sp-weights = { workspace = true }
sp-storage = { workspace = true }
sp-consensus-slots = { workspace = true }
pallet-session = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-keyring = { workspace = true }
sp-io = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-multisig/std",
    "pallet-utility/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-orinq-receipts/std",
    "orinq-receipts-primitives/std",
    "pallet-motra/std",
    "motra-primitives/std",
    "sp-arithmetic/std",
    "frame-system-rpc-runtime-api/std",
    "substrate-wasm-builder",
    "pallet-sidechain/std",
    "pallet-session-validator-management/std",
    "pallet-block-rewards/std",
    "pallet-partner-chains-session/std",
    "pallet-native-token-management/std",
    "pallet-session-runtime-stub/std",
    "sp-sidechain/std",
    "sp-block-rewards/std",
    "sp-session-validator-management/std",
    "sp-native-token-management/std",
    "sidechain-domain/std",
    "sidechain-slots/std",
    "session-manager/std",
    "authority-selection-inherents/std",
    "sp-staking/std",
    "sp-weights/std",
    "sp-storage/std",
    "sp-consensus-slots/std",
    "pallet-session/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-orinq-receipts/runtime-benchmarks",
    "pallet-motra/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-session-validator-management/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-executive/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-orinq-receipts/try-runtime",
    "pallet-motra/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-session-validator-management/try-runtime",
]
