[package]
name = "motra-rpc"
version = "0.1.0"
description = "JSON-RPC methods for pallet-motra"
authors = ["Materios Contributors"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-5" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-5" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-5" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-5" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-5" }
parity-scale-codec = { version = "3.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

motra-primitives = { path = "../primitives" }
